fix cv page overflow issue

--- a/src/app/components/cv/cv.component.css
+++ b/src/app/components/cv/cv.component.css
@@ -32,3 +32,8 @@ table {
 .container {
   overflow: auto;
 }
+
+.note {
+  text-align: center;
+  width: 100%;
+}
